[gd_scene load_steps=8 format=2]

[ext_resource path="res://CZCIONKI/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://CZCIONKI/droid-sans/DroidSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SCENY/AnswerButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://GRAFIKA/png-clipart-computer-icons-bicycle-bicycle-text-sport.png" type="Texture" id=4]
[ext_resource path="res://SCENY/QuestionScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="QuestionScreen" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer1" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 50.0
margin_right = 1840.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer1"]
margin_right = 1760.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="MarginContainer1/VBoxContainer"]
margin_right = 1760.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Pytanie nr ..."
align = 1

[node name="Label2" type="Label" parent="MarginContainer1/VBoxContainer"]
margin_top = 52.0
margin_right = 1760.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = ".................................................................................."
autowrap = true
clip_text = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer"]
margin_top = 150.0
margin_right = 1760.0
margin_bottom = 400.0
size_flags_horizontal = 3
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 650.0
margin_right = 1800.0
margin_bottom = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer2"]
margin_right = 1720.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 50
custom_constants/hseparation = 50

[node name="AnswerButton" parent="MarginContainer2/GridContainer" instance=ExtResource( 3 )]
margin_right = 1720.0

[node name="Label" parent="MarginContainer2/GridContainer/AnswerButton/HBoxContainer" index="0"]
margin_right = 45.0
text = "A)"

[node name="Label2" parent="MarginContainer2/GridContainer/AnswerButton/HBoxContainer" index="1"]
margin_left = 95.0
margin_right = 1720.0

[node name="AnswerButton2" parent="MarginContainer2/GridContainer" instance=ExtResource( 3 )]
margin_top = 125.0
margin_right = 1720.0
margin_bottom = 200.0

[node name="Label" parent="MarginContainer2/GridContainer/AnswerButton2/HBoxContainer" index="0"]
margin_right = 46.0
text = "B)"

[node name="Label2" parent="MarginContainer2/GridContainer/AnswerButton2/HBoxContainer" index="1"]
margin_left = 96.0
margin_right = 1720.0

[node name="AnswerButton3" parent="MarginContainer2/GridContainer" instance=ExtResource( 3 )]
margin_top = 250.0
margin_right = 1720.0
margin_bottom = 325.0

[node name="Label" parent="MarginContainer2/GridContainer/AnswerButton3/HBoxContainer" index="0"]
margin_right = 45.0
text = "C)"

[node name="Label2" parent="MarginContainer2/GridContainer/AnswerButton3/HBoxContainer" index="1"]
margin_left = 95.0
margin_right = 1720.0

[editable path="MarginContainer2/GridContainer/AnswerButton"]
[editable path="MarginContainer2/GridContainer/AnswerButton2"]
[editable path="MarginContainer2/GridContainer/AnswerButton3"]
